<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/dark_turquoise">

        <!-- Header -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="-15dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo_project_trojan" />
        </RelativeLayout>

        <!-- Main Content Form -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="30dp"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <!-- First Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/first_name"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/enter_firstname"
                android:inputType="textPersonName"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:background="#88ADD8E6" />

            <!-- Surname -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/enter_surname"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/et_surname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/enter_surname"
                android:inputType="textPersonName"
                android:paddingHorizontal="12dp"
                android:background="#88ADD8E6"
                android:textSize="16sp" />

            <!-- Email -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/email_input_title"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="12dp"
                android:background="#88ADD8E6" />

            <!-- Enquiry -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/enquiry"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/et_enquiry"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                android:gravity="top"
                android:hint="@string/enter_your_enquiry"
                android:inputType="textMultiLine"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                android:background="#88ADD8E6"
                android:textSize="16sp" />

            <!-- Submit Button -->
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="65dp"
                android:background="@drawable/rounded_button"
                android:paddingHorizontal="30dp"
                android:paddingVertical="12dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Footer Section -->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:background="#1E1E1E"
            android:padding="20dp">

            <!-- Contact Us Title -->
            <TextView
                android:id="@+id/contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textStyle="bold"
                android:textColor="@color/dark_turquoise"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />

            <!-- Email Row -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/email_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/email"
                    android:src="@drawable/email_icon" />

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/email_icon"
                    android:layout_toEndOf="@id/email_icon"
                    android:layout_marginStart="10dp"
                    android:text="@string/email"
                    android:textColor="@color/dark_turquoise"
                    android:textSize="14sp" />
            </RelativeLayout>
            <!-- Footer Items -->
            <TextView
                android:id="@+id/footer_item1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:text="@string/footer_item1"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/footer_item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:text="@string/footer_item2"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/footer_item3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:text="@string/footer_item3"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/footer_item4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:text="@string/footer_item4"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <!-- Copyright -->
            <TextView
                android:id="@+id/footer_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/copyright"
                android:textColor="@color/white"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

